maj bouton page dynamique

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const penguinSlides = speciesList.map((species) => {
           </a>
         </div>
         <div class="rounded-lg border border-blue-400/40 bg-blue-900/30 px-3 py-2 shadow">
-          <a href="/rendu-statique"
+          <a href="/rendu-dynamique"
             class="text-sm font-semibold text-white transition hover:text-blue-200 block"
           >
             Page dynamique
