--- a/src/pages/rendu-dynamique/index.astro
+++ b/src/pages/rendu-dynamique/index.astro
@@ -27,6 +27,11 @@ const sections = [
                 <h1 class="text-4xl font-semibold tracking-tight">
                     Sélectionner les données d'une espèce
                 </h1>
+                <a href="/"
+          class="text-sm font-semibold text-white transition hover:text-blue-200 block border border-blue-300 rounded-lg px-4 py-2 bg-blue-900/60"
+        >
+          Retour à l'accueil
+        </a>
             </header>
             {
                 sections.map(({ title, links }) => (
