--- a/src/pages/rendu-statique/index.astro
+++ b/src/pages/rendu-statique/index.astro
@@ -29,6 +29,11 @@ const sections = [
         >
           Page statique
         </p>
+        <a href="/"
+          class="text-sm font-semibold text-white transition hover:text-blue-200 block border border-blue-300 rounded-lg px-4 py-2 bg-blue-900/60"
+        >
+          Retour à l'accueil
+        </a>
         <h1 class="text-4xl font-semibold tracking-tight">
           Sélectionner une donnée statique
         </h1>
